; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_Episode.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_Episode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gamemode = common dso_local global i64 0, align 8
@shareware = common dso_local global i64 0, align 8
@SWSTRING = common dso_local global i32 0, align 4
@ReadDef1 = common dso_local global i32 0, align 4
@registered = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"M_Episode: 4th episode requires UltimateDOOM\0A\00", align 1
@epi = common dso_local global i32 0, align 4
@NewDef = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_Episode(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @gamemode, align 8
  %4 = load i64, i64* @shareware, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %6
  %10 = load i32, i32* @SWSTRING, align 4
  %11 = call i32 @M_StartMessage(i32 %10, i32* null, i32 0)
  %12 = call i32 @M_SetupNextMenu(i32* @ReadDef1)
  br label %26

13:                                               ; preds = %6, %1
  %14 = load i64, i64* @gamemode, align 8
  %15 = load i64, i64* @registered, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i32, i32* %2, align 4
  %19 = icmp sgt i32 %18, 2
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 @fprintf(i32 %21, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %20, %17, %13
  %24 = load i32, i32* %2, align 4
  store i32 %24, i32* @epi, align 4
  %25 = call i32 @M_SetupNextMenu(i32* @NewDef)
  br label %26

26:                                               ; preds = %23, %9
  ret void
}

declare dso_local i32 @M_StartMessage(i32, i32*, i32) #1

declare dso_local i32 @M_SetupNextMenu(i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
